tests/derive-tests/as_variant/fail/struct.err.txt
error: expected `enum`
 --> /tests/derive-tests/as_variant/fail/struct.rs:4:5
  |
4 | pub struct Struct {
  |     ^^^^^^
